2006-06-06  Ben Elliston  <bje@gnu.org>

	* Makefile.am (CONTRIB): New.
	(EXTRA_DIST): Add $(CONTRIB).
	(doc/dejagnu.texi): Set directory-category param to docbook2texi.
	* Makefile.in: Regenerate.
	* doc/dejagnu.texi: Likewise.

2006-06-06  Ben Elliston  <bje@gnu.org>

	* runtest.exp (load_lib): Typo fix.

2006-06-06  Ben Elliston  <bje@gnu.org>

	* dejagnu.h: Tidy comments.
	(_BUFFER_SIZE_): Remove to minimise namespace pollution.
	(wait): Define this function unconditionally.  Conditionally
	compile the function body if _DEJAGNU_WAIT_ is defined.
	(buffer): Set the buffer size explicitly.
	(pass): Use sizeof (buffer).  Call wait() unconditionally.
	(fail, untested, unresolved, note): Likewise.
	(enum teststate): Tidy whitespace.

2006-06-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.xml, doc/ref.xml, doc/user.xml: Edits.
	* doc/dejagnu.texi: Regenerate.

2006-06-06  Ben Elliston  <bje@gnu.org>

	Import from GCC tree:
	2006-06-02  Richard Earnshaw  <rearnsha@arm.com>
		    Mike Stump  <mrs@apple.com>

	* compare_tests: Handle multilibs better.

2006-06-06  Ben Elliston  <bje@gnu.org>

	* doc/dejagnu.texi: Regnerate using Docbook2X 0.8.7.

	* configure.ac: Check for docbook2texi, not docbook2x-texi.  The
	wrapper script changed its name again in the latest release.
	* configure: Regenerate.
	* Makefile.am (DOCBOOK2X_TEXI): Rename from this ..
	(DOCBOOK2TEXI): .. to this.
	(doc/dejagnu.texi): Do not use output-file parameter to deposit
	the .texi file into the source directory; use mv(1) instead. Set
	directory-description parameter.
	* Makefile.in: Likewise.

2006-06-02  Ben Elliston  <bje@gnu.org>

	* config/sim.exp (sim_upload): Match up argument names.

2006-06-02  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to most recent version.
	* config.sub: Likewise.

2006-06-02  Ben Elliston  <bje@gnu.org>

	* config/dos.exp (dos_open): Only run global board_info once at
	the beginning of the proc; remove duplicates.