@@ -1,3 +1,15 @@
+2006-06-09  Ben Elliston  <bje@gnu.org>
+
+	* baseboards/cris-sim.exp: Use Tcl fall-through syntax for
+	multiple cases, not a list (case uses lists, switch does not).
+	Pass -glob to switch where applicable to emulate case behaviour.
+	* baseboards/h8300.exp: Likewise.
+	* lib/framework.exp (clone_output): Likewise.
+	(clear_xfail): Likewise.
+	(clear_kfail): Likewise.
+	* lib/libgloss.exp (process_multilib_options): Likewise.
+	* runtest.exp: Likewise.
+
 2006-06-06  Ben Elliston  <bje@gnu.org>
 
 	* Makefile.am (CONTRIB): New.
